# cyborg

./: .gitignore  pyproject.toml
cyborg/: __main__.py  config.py  main.py
cyborg/music/: commands.py
cyborg/utils/: logging.py
tests/: test_cyborg.py
